fix gap

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -63,7 +63,7 @@
   justify-content: space-between;
   padding: 20px;
   background-color: #ffffff;
-  column-gap: 2px;
+  column-gap: 10px;
 }
 
 .info-item {
